--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
         "SharedArrayBuffer": "readonly"
     },
     "rules": {
+        "prefer-const": 1,
         "no-unused-vars": 1,
         "no-native-reassign": 0,
         "no-negated-in-lhs": 0,
@@ -18,7 +19,8 @@
         "@typescript-eslint/ban-ts-comment": 0,
         "@typescript-eslint/no-unused-vars": 0,
         "no-console": 0,
-        "no-use-before-define": 0
+        "no-use-before-define": 0,
+        "no-var": 1
     },
     "extends": [
         "eslint:recommended",
