--- a/package.json
+++ b/package.json
@@ -22,11 +22,7 @@
         "ncu": "ncu -u && npm i && npm audit fix",
         "git": "git add . && git commit -m"
     },
-    "keywords": [
-        "thi.ng",
-        "multiplex",
-        "FRP"
-    ],
+    "keywords": [ "thi.ng", "multiplex", "FRP" ],
     "publishConfig": {
         "access": "public"
     },
@@ -56,7 +52,6 @@
         "@typescript-eslint/eslint-plugin": "^4.28.4",
         "@typescript-eslint/parser": "^4.28.4",
         "babel-jest": "^27.0.6",
-        "better-docs": "^2.3.2",
         "cross-env": "^7.0.3",
         "eslint": "^7.31.0",
         "gh-pages": "^3.2.3",
