--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "@-0/hdom",
     "author": "Logan Powell",
     "license": "MIT",
-    "version": "0.3.12",
+    "version": "0.3.13",
     "description": "DOM target provided by http://thi.ng/hdom",
     "main": "./lib/index.js",
     "type": "module",
@@ -22,7 +22,11 @@
         "ncu": "ncu -u && npm i && npm audit fix",
         "git": "git add . && git commit -m"
     },
-    "keywords": [ "thi.ng", "multiplex", "FRP" ],
+    "keywords": [
+        "thi.ng",
+        "multiplex",
+        "FRP"
+    ],
     "publishConfig": {
         "access": "public"
     },
